# Spherical-Harmoincs-Shadows

./: .gitignore  .~Final Porject.pptx  CGT620_hw4.pptx  CMakeLists.txt  Checkpoint 2&3.pptx  Final Porject.pptx  Meshes  build.sh  compile_commands.json  data.ipynb  helper_cuda.h  imgui.ini  lab5.cu  lab5.h  main.cpp  main.cu  otb_window.cpp  otb_window.h  profiling.sh  spherical_harmonics.cpp  spherical_harmonics.cu  spherical_harmonics.h
.cache/clangd/index/: Logger.cpp.9B9C7B7971297CF5.idx  Logger.h.328852489789E261.idx  Utils.cpp.B6605C9596073F7D.idx  Utils.h.527E8FEBB6B7B1FB.idx  _fixes.hpp.9640E886C02A00DB.idx  _fixes.hpp.EA40B0B01611B87A.idx  _vectorize.hpp.EB32999A2E07DC48.idx  _vectorize.hpp.F3D46FD5EFCA22F0.idx  asset_manager.cpp.70BA65F69FB974ED.idx  asset_manager.h.A76A2DDF20E63273.idx  common.h.389E50FEDE785C20.idx  common.hpp.6B75E94B0BEFB151.idx  common.hpp.E306390AC9F7C5CA.idx  component_wise.hpp.2EF6D40F0DF44FE3.idx  component_wise.hpp.52DE4338F494B392.idx  component_wise.inl.32E9EA52D8F2F984.idx  component_wise.inl.A37AE94AA6F56C91.idx  compute_common.hpp.8C3533C34286BAC2.idx  compute_common.hpp.F7A23E96F5CB02AB.idx  compute_vector_relational.hpp.42152E3AB19D5380.idx  compute_vector_relational.hpp.74E3ECC787650904.idx  constants.hpp.5BA7673195FD66C4.idx  constants.hpp.C5C01BAE23DE7529.idx  constants.inl.1F6E3FD66D54D8FB.idx  constants.inl.731FE1EDD0C8D1F7.idx  context.c.3BA734123A0649D7.idx  egl_context.c.05CC9F9A3C5BFE0C.idx  egl_context.h.408343DD0BFD0646.idx  epsilon.hpp.1100D38B92419CE8.idx  epsilon.hpp.EB722D22EBBE9FCA.idx  epsilon.inl.C86FD09F3B160F12.idx  epsilon.inl.D9363D54A2794ECE.idx  exponential.hpp.E2484594DC250B44.idx  exponential.hpp.E75374CC74770E33.idx  func_common.inl.C3ECED901E8218CF.idx  (+411 more)
.ipynb_checkpoints/: data-checkpoint.ipynb
Shaders/: template_fs.glsl  template_vs.glsl
code/: data.ipynb  helper_cuda.hpp  main.cu
graphics_lib/: CMakeLists.txt  asset_manager.h  render_engine.cpp  render_engine.h
graphics_lib/Render/: material.cpp  material.h  mesh.cpp  mesh.h  ppc.cpp  ppc.h  shader.cpp  shader.h
graphics_lib/Utilities/: Utils.h
testbuild/: CMakeCache.txt  Makefile  Shaders  cmake_install.cmake  hw
testbuild/graphics_lib/: Makefile  cmake_install.cmake
yichen_sheng/Source/: CMakeLists.txt  helper_cuda.hpp  lab5.cu  lab5.h  otb_window.cpp  otb_window.h
(+13 files in other folders)
